--- a/sass/6-Components/_components.card.scss
+++ b/sass/6-Components/_components.card.scss
@@ -161,7 +161,6 @@
 		@media screen and (min-width: 500px) {
 			text-align: center;
 			justify-content: stretch;
-			height: 50%;
 		    margin: 0 auto;
 		    padding: 0 10px;
 		    width: 100%;
@@ -193,6 +192,7 @@
 		}
 		@media screen and (min-width: 500px) {
 			order: 0;
+			margin-bottom: 10px;
 		}
 		.c-instance__time {
 			i {
@@ -380,5 +380,154 @@ $red: #ff6600;
 		}
 	}
 }
+
+.c-card-list--4 {
+	margin: 0 6px;
+	@media screen and (min-width: 500px) {
+		margin: 0 auto;
+	}
+	.c-card {
+		width: 100%;
+		height: 300px;
+		animation: .3s ease-in-out both fade-in;
+		display: flex;
+		justify-content: stretch;
+		flex-direction: row;
+		padding: 10px 0 0 0;
+		border-radius: 15px;
+		width: 100%;
+		@media screen and (min-width: 500px) {
+			width: calc(1/3*100% - (1 - 1/3)*10px);
+		}
+	}
+	.c-card__image {
+		display: flex;
+		justify-content: flex-end;
+		flex-direction: row;
+		border-radius: 15px;
+		position: relative;
+		overflow: hidden;
+		@media screen and (min-width: 500px) {
+			flex-direction: column;
+		}
+		&::before {
+		    background: linear-gradient(15deg, black 10%, rgba(0, 0, 0, 0.978) 18.55%, rgba(0, 0, 0, 0.925) 25.93%, rgba(0, 0, 0, 0.857) 32.23%, rgba(0, 0, 0, 0.781) 37.9%, rgba(0, 0, 0, 0.701) 43.12%, rgba(0, 0, 0, 0.62) 48.07%, rgba(0, 0, 0, 0.538) 52.84%, rgba(0, 0, 0, 0.455) 57.61%, rgba(0, 0, 0, 0.373) 62.38%, rgba(0, 0, 0, 0.291) 67.33%, rgba(0, 0, 0, 0.212) 72.55%, rgba(0, 0, 0, 0.138) 78.22%, rgba(0, 0, 0, 0.07) 84.61%, rgba(0, 0, 0, 0.019) 92.08%, rgba(0, 0, 0, 0) 100%);
+		    display: block;
+		    content: '';
+		    width: 100%;
+		    height: 100%;
+		    opacity: 0.9;
+		    position: absolute;
+		    bottom: 0;
+		    transition: all 250ms ease-in-out;
+			z-index: -1;
+			border-radius: 15px;
+		}
+		&::after {
+			content: '';
+			background-image: url("https://source.unsplash.com/random/850x500");
+			background-repeat: no-repeat;
+			background-position: center;
+			background-size: cover;
+			height: 100%;
+			width: 100%;
+			position: absolute;
+			filter: grayscale(100%);
+			z-index: -2;
+			border-radius: 15px;
+		}
+	}
+	.c-card__content {
+		padding: 10px;
+	    color: #fff;
+	    font-family: 'bluu';
+	    display: flex;
+	    flex-direction: column;
+	    justify-content: flex-end;
+	}
+	.c-card__title {
+	    letter-spacing: 1.5px;
+	    position: relative;
+	    margin-bottom: 12px;
+	    &::before {
+			position: absolute;
+			content: '';
+			display: inline-block;
+			top: -20px;
+			left: -15px;
+			width: 50px;
+			height: 50px;
+			border-radius: 25px;
+			background-color: #69b6d5;
+			mix-blend-mode: overlay;
+			z-index: -1;
+		}
+
+	}
+	.c-card__info {
+		p {
+		    background-color: transparentize(grey,0.5);
+		    display: inline;
+			position: relative;
+			&::after {
+				position: absolute;
+				content: '';
+				display: inline-block;
+				width: 150px;
+				height: 150px;
+				border-radius: 75px;
+				background-color: #69b6d5;
+				mix-blend-mode: soft-light;
+				z-index: -1;
+			    top: -90px;
+			    left: 150px;
+			}
+		}
+		.c-card__cta {
+			margin-left: 10px;
+			font-size: 85%;
+			position: relative;
+			&::after {
+				position: absolute;
+				content: '';
+				display: inline-block;
+				width: 30px;
+				height: 30px;
+				border-radius: 15px;
+				background-color: #69b6d5;
+				mix-blend-mode: soft-light;
+				z-index: -1;
+				top: -10px;
+			    left: 50px;
+			}
+			i {
+				margin-left: 5px;
+			}
+		}
+	}
+	.c-card:hover {
+		.c-card__title::before {
+			opacity: 0.8;
+			top: -10px;
+			left: -65px;
+			transition: all ease-in-out 2s;
+		}
+		.c-card__info {
+			p::after {
+				opacity: 0.8;
+			    top: -60px;
+			    left: 250px;
+			    transition: all ease-in-out 2s;
+			}
+			.c-card__cta::after {
+				opacity: 0.8;
+				top: 50px;
+			    left: 50px;
+			    transition: all ease-in-out 2s;
+			}
+		}
+	}
+}
+
 
 
