--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "2-tools/_tools.clearfix.scss";
 @import "2-tools/_tools.font-size.scss";
 @import "2-tools/_tools.hidden.scss";
+@import "2-tools/_tools.fonts.scss";
 
 // 3-Generic
 
