--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+@font-face {
+  font-family: 'bluu';
+  src: url("../fonts/bluunext-bold-webfont.woff2") format("woff2"), url("../fonts/bluunext-bold-webfont.woff") format("woff"), url("../fonts/bluunext-bold.ttf") format("truetype"), url("../fonts/bluunext-bold-webfont.svg#bluu_nextbold") format("svg");
+  font-weight: normal;
+  font-style: normal; }
 /* ==========================================================================
    #BOX-SIZING
    ========================================================================== */
@@ -1800,7 +1805,6 @@ body {
     .c-card-list--2 .c-card__content {
       text-align: center;
       justify-content: stretch;
-      height: 50%;
       margin: 0 auto;
       padding: 0 10px;
       width: 100%; } }
@@ -1827,7 +1831,8 @@ body {
     opacity: 0.5; }
   @media screen and (min-width: 500px) {
     .c-card-list--2 .c-instance__date-time {
-      order: 0; } }
+      order: 0;
+      margin-bottom: 10px; } }
   .c-card-list--2 .c-instance__date-time .c-instance__time i {
     display: none; }
   @media screen and (min-width: 500px) {
@@ -1978,6 +1983,131 @@ body {
   .c-card-list--3 .c-btn i {
     margin-right: 10px; }
 
+.c-card-list--4 {
+  margin: 0 6px; }
+  @media screen and (min-width: 500px) {
+    .c-card-list--4 {
+      margin: 0 auto; } }
+  .c-card-list--4 .c-card {
+    width: 100%;
+    height: 300px;
+    animation: .3s ease-in-out both fade-in;
+    display: flex;
+    justify-content: stretch;
+    flex-direction: row;
+    padding: 10px 0 0 0;
+    border-radius: 15px;
+    width: 100%; }
+    @media screen and (min-width: 500px) {
+      .c-card-list--4 .c-card {
+        width: calc(1/3*100% - (1 - 1/3)*10px); } }
+  .c-card-list--4 .c-card__image {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    border-radius: 15px;
+    position: relative;
+    overflow: hidden; }
+    @media screen and (min-width: 500px) {
+      .c-card-list--4 .c-card__image {
+        flex-direction: column; } }
+    .c-card-list--4 .c-card__image::before {
+      background: linear-gradient(15deg, black 10%, rgba(0, 0, 0, 0.978) 18.55%, rgba(0, 0, 0, 0.925) 25.93%, rgba(0, 0, 0, 0.857) 32.23%, rgba(0, 0, 0, 0.781) 37.9%, rgba(0, 0, 0, 0.701) 43.12%, rgba(0, 0, 0, 0.62) 48.07%, rgba(0, 0, 0, 0.538) 52.84%, rgba(0, 0, 0, 0.455) 57.61%, rgba(0, 0, 0, 0.373) 62.38%, rgba(0, 0, 0, 0.291) 67.33%, rgba(0, 0, 0, 0.212) 72.55%, rgba(0, 0, 0, 0.138) 78.22%, rgba(0, 0, 0, 0.07) 84.61%, rgba(0, 0, 0, 0.019) 92.08%, rgba(0, 0, 0, 0) 100%);
+      display: block;
+      content: '';
+      width: 100%;
+      height: 100%;
+      opacity: 0.9;
+      position: absolute;
+      bottom: 0;
+      transition: all 250ms ease-in-out;
+      z-index: -1;
+      border-radius: 15px; }
+    .c-card-list--4 .c-card__image::after {
+      content: '';
+      background-image: url("https://source.unsplash.com/random/850x500");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      filter: grayscale(100%);
+      z-index: -2;
+      border-radius: 15px; }
+  .c-card-list--4 .c-card__content {
+    padding: 10px;
+    color: #fff;
+    font-family: 'bluu';
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end; }
+  .c-card-list--4 .c-card__title {
+    letter-spacing: 1.5px;
+    position: relative;
+    margin-bottom: 12px; }
+    .c-card-list--4 .c-card__title::before {
+      position: absolute;
+      content: '';
+      display: inline-block;
+      top: -20px;
+      left: -15px;
+      width: 50px;
+      height: 50px;
+      border-radius: 25px;
+      background-color: #69b6d5;
+      mix-blend-mode: overlay;
+      z-index: -1; }
+  .c-card-list--4 .c-card__info p {
+    background-color: rgba(128, 128, 128, 0.5);
+    display: inline;
+    position: relative; }
+    .c-card-list--4 .c-card__info p::after {
+      position: absolute;
+      content: '';
+      display: inline-block;
+      width: 150px;
+      height: 150px;
+      border-radius: 75px;
+      background-color: #69b6d5;
+      mix-blend-mode: soft-light;
+      z-index: -1;
+      top: -90px;
+      left: 150px; }
+  .c-card-list--4 .c-card__info .c-card__cta {
+    margin-left: 10px;
+    font-size: 85%;
+    position: relative; }
+    .c-card-list--4 .c-card__info .c-card__cta::after {
+      position: absolute;
+      content: '';
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      border-radius: 15px;
+      background-color: #69b6d5;
+      mix-blend-mode: soft-light;
+      z-index: -1;
+      top: -10px;
+      left: 50px; }
+    .c-card-list--4 .c-card__info .c-card__cta i {
+      margin-left: 5px; }
+  .c-card-list--4 .c-card:hover .c-card__title::before {
+    opacity: 0.8;
+    top: -10px;
+    left: -65px;
+    transition: all ease-in-out 2s; }
+  .c-card-list--4 .c-card:hover .c-card__info p::after {
+    opacity: 0.8;
+    top: -60px;
+    left: 250px;
+    transition: all ease-in-out 2s; }
+  .c-card-list--4 .c-card:hover .c-card__info .c-card__cta::after {
+    opacity: 0.8;
+    top: 50px;
+    left: 50px;
+    transition: all ease-in-out 2s; }
+
 .c-instance:nth-of-type(1) {
   animation-delay: 0.07s; }
 
@@ -2085,6 +2215,36 @@ body {
 .c-card-list--3 .c-card:nth-of-type(6) .c-card__image::before, .c-card-list--3 .c-card:nth-of-type(6) .c-card__content::before, .c-card-list--3 .c-card:nth-of-type(6) .c-btn {
   background-color: #23CE6B; }
 .c-card-list--3 .c-card:nth-of-type(6) .c-card__mob-image {
+  border-color: #23CE6B; }
+
+.c-card-list--4 .c-card:nth-of-type(1) .c-card__title::before, .c-card-list--4 .c-card:nth-of-type(1) .c-card__title::selection, .c-card-list--4 .c-card:nth-of-type(1) .c-card__cta::after, .c-card-list--4 .c-card:nth-of-type(1) .c-card__cta::selection, .c-card-list--4 .c-card:nth-of-type(1) .c-card__info p::selection, .c-card-list--4 .c-card:nth-of-type(1) .c-card__info p::after {
+  background-color: #E43F6F; }
+.c-card-list--4 .c-card:nth-of-type(1) .c-card__mob-image {
+  border-color: #E43F6F; }
+
+.c-card-list--4 .c-card:nth-of-type(2) .c-card__title::before, .c-card-list--4 .c-card:nth-of-type(2) .c-card__title::selection, .c-card-list--4 .c-card:nth-of-type(2) .c-card__cta::after, .c-card-list--4 .c-card:nth-of-type(2) .c-card__cta::selection, .c-card-list--4 .c-card:nth-of-type(2) .c-card__info p::selection, .c-card-list--4 .c-card:nth-of-type(2) .c-card__info p::after {
+  background-color: #008DD5; }
+.c-card-list--4 .c-card:nth-of-type(2) .c-card__mob-image {
+  border-color: #008DD5; }
+
+.c-card-list--4 .c-card:nth-of-type(3) .c-card__title::before, .c-card-list--4 .c-card:nth-of-type(3) .c-card__title::selection, .c-card-list--4 .c-card:nth-of-type(3) .c-card__cta::after, .c-card-list--4 .c-card:nth-of-type(3) .c-card__cta::selection, .c-card-list--4 .c-card:nth-of-type(3) .c-card__info p::selection, .c-card-list--4 .c-card:nth-of-type(3) .c-card__info p::after {
+  background-color: #373F51; }
+.c-card-list--4 .c-card:nth-of-type(3) .c-card__mob-image {
+  border-color: #373F51; }
+
+.c-card-list--4 .c-card:nth-of-type(4) .c-card__title::before, .c-card-list--4 .c-card:nth-of-type(4) .c-card__title::selection, .c-card-list--4 .c-card:nth-of-type(4) .c-card__cta::after, .c-card-list--4 .c-card:nth-of-type(4) .c-card__cta::selection, .c-card-list--4 .c-card:nth-of-type(4) .c-card__info p::selection, .c-card-list--4 .c-card:nth-of-type(4) .c-card__info p::after {
+  background-color: #70F8BA; }
+.c-card-list--4 .c-card:nth-of-type(4) .c-card__mob-image {
+  border-color: #70F8BA; }
+
+.c-card-list--4 .c-card:nth-of-type(5) .c-card__title::before, .c-card-list--4 .c-card:nth-of-type(5) .c-card__title::selection, .c-card-list--4 .c-card:nth-of-type(5) .c-card__cta::after, .c-card-list--4 .c-card:nth-of-type(5) .c-card__cta::selection, .c-card-list--4 .c-card:nth-of-type(5) .c-card__info p::selection, .c-card-list--4 .c-card:nth-of-type(5) .c-card__info p::after {
+  background-color: #EF3054; }
+.c-card-list--4 .c-card:nth-of-type(5) .c-card__mob-image {
+  border-color: #EF3054; }
+
+.c-card-list--4 .c-card:nth-of-type(6) .c-card__title::before, .c-card-list--4 .c-card:nth-of-type(6) .c-card__title::selection, .c-card-list--4 .c-card:nth-of-type(6) .c-card__cta::after, .c-card-list--4 .c-card:nth-of-type(6) .c-card__cta::selection, .c-card-list--4 .c-card:nth-of-type(6) .c-card__info p::selection, .c-card-list--4 .c-card:nth-of-type(6) .c-card__info p::after {
+  background-color: #23CE6B; }
+.c-card-list--4 .c-card:nth-of-type(6) .c-card__mob-image {
   border-color: #23CE6B; }
 
 /* ==========================================================================
