--- a/css/main.css
+++ b/css/main.css
@@ -1752,7 +1752,6 @@ body {
   width: 100%;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 20px 0px;
-  height: 25vh;
   animation: .3s ease-in-out both fade-in; }
   @media screen and (min-width: 500px) {
     .c-card-list--2 .c-card {
@@ -1760,6 +1759,10 @@ body {
       width: calc(1/3*100% - (1 - 1/3)*10px);
       margin: 12px 0;
       border-radius: 8px; } }
+  @media screen and (max-width: 500px) {
+    .c-card-list--2 .c-card {
+      display: flex;
+      flex-direction: row; } }
   .c-card-list--2 .c-card:hover {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 20px 0px;
     transition: all 150ms ease-in; }
@@ -1776,33 +1779,39 @@ body {
   background-size: 100%;
   height: 100%;
   position: relative;
+  flex-grow: 1;
   transition: all 150ms ease-in-out; }
   @media screen and (min-width: 500px) {
     .c-card-list--2 .c-card__image {
-      border-radius: 8px; } }
-  .c-card-list--2 .c-card__image::before {
-    background: linear-gradient(to top, black 10%, rgba(0, 0, 0, 0.978) 18.55%, rgba(0, 0, 0, 0.925) 25.93%, rgba(0, 0, 0, 0.857) 32.23%, rgba(0, 0, 0, 0.781) 37.9%, rgba(0, 0, 0, 0.701) 43.12%, rgba(0, 0, 0, 0.62) 48.07%, rgba(0, 0, 0, 0.538) 52.84%, rgba(0, 0, 0, 0.455) 57.61%, rgba(0, 0, 0, 0.373) 62.38%, rgba(0, 0, 0, 0.291) 67.33%, rgba(0, 0, 0, 0.212) 72.55%, rgba(0, 0, 0, 0.138) 78.22%, rgba(0, 0, 0, 0.07) 84.61%, rgba(0, 0, 0, 0.019) 92.08%, rgba(0, 0, 0, 0) 100%);
-    display: block;
-    content: '';
-    width: 100%;
-    height: 100%;
-    opacity: 0.9;
-    position: absolute;
-    bottom: 0;
-    transition: all 250ms ease-in-out; }
-    @media screen and (min-width: 500px) {
+      border-radius: 8px;
+      display: block; }
+      .c-card-list--2 .c-card__image::before {
+        background: linear-gradient(to top, black 10%, rgba(0, 0, 0, 0.978) 18.55%, rgba(0, 0, 0, 0.925) 25.93%, rgba(0, 0, 0, 0.857) 32.23%, rgba(0, 0, 0, 0.781) 37.9%, rgba(0, 0, 0, 0.701) 43.12%, rgba(0, 0, 0, 0.62) 48.07%, rgba(0, 0, 0, 0.538) 52.84%, rgba(0, 0, 0, 0.455) 57.61%, rgba(0, 0, 0, 0.373) 62.38%, rgba(0, 0, 0, 0.291) 67.33%, rgba(0, 0, 0, 0.212) 72.55%, rgba(0, 0, 0, 0.138) 78.22%, rgba(0, 0, 0, 0.07) 84.61%, rgba(0, 0, 0, 0.019) 92.08%, rgba(0, 0, 0, 0) 100%);
+        content: '';
+        width: 100%;
+        height: 100%;
+        opacity: 0.9;
+        position: absolute;
+        bottom: 0;
+        transition: all 250ms ease-in-out; } }
+    @media screen and (min-width: 500px) and (min-width: 500px) {
       .c-card-list--2 .c-card__image::before {
         border-radius: 8px; } }
+
+  @media screen and (max-width: 500px) {
+    .c-card-list--2 .c-card__image {
+      background-image: none; } }
 .c-card-list--2 .c-card__content {
-  position: absolute;
   bottom: 0;
-  color: white;
-  margin: 5px;
+  color: black;
+  margin: 5px 5px 5px 5px;
   width: calc(100% - 10px);
   display: flex;
   flex-direction: column; }
   @media screen and (min-width: 500px) {
     .c-card-list--2 .c-card__content {
+      color: white;
+      position: absolute;
       text-align: center;
       justify-content: stretch;
       margin: 0 auto;
@@ -1868,6 +1877,19 @@ body {
       margin-right: 5px; }
   .c-card-list--2 .c-card__btn-container .c-btn--info {
     background-color: #2A2A72; }
+.c-card-list--2 .c-card__mob-image {
+  background-image: url("https://source.unsplash.com/random/500x800");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 80px;
+  width: 120px;
+  position: relative;
+  transition: all 150ms ease-in-out;
+  border-left: solid 5px; }
+  @media screen and (min-width: 500px) {
+    .c-card-list--2 .c-card__mob-image {
+      display: none; } }
 
 .c-card-list--3 .c-card {
   width: 100%;
