--- a/sass/6-Components/_components.card.scss
+++ b/sass/6-Components/_components.card.scss
@@ -103,13 +103,16 @@
 		width: 100%;
 		background-color: white;
 		box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 20px 0px;
-	    height: 25vh;
 		animation: .3s ease-in-out both fade-in;
 		@media screen and (min-width: 500px) {
 			height: 300px;
 			width: calc(1/3*100% - (1 - 1/3)*10px);
 			margin: 12px 0;
 			border-radius: 8px;
+		}
+		@media screen and (max-width: 500px) {
+		    display: flex;
+		    flex-direction: row;
 		}
 		&:hover {
 			box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 20px 0px;
@@ -131,34 +134,39 @@
 	    background-size: 100%;
 	    height: 100%;
 	    position: relative;
+        flex-grow: 1;
 	    transition: all 150ms ease-in-out;
 		@media screen and (min-width: 500px) {
 			border-radius: 8px;
-		}
-		&::before {
-		    background: linear-gradient(to top, black 10%, rgba(0, 0, 0, 0.978) 18.55%, rgba(0, 0, 0, 0.925) 25.93%, rgba(0, 0, 0, 0.857) 32.23%, rgba(0, 0, 0, 0.781) 37.9%, rgba(0, 0, 0, 0.701) 43.12%, rgba(0, 0, 0, 0.62) 48.07%, rgba(0, 0, 0, 0.538) 52.84%, rgba(0, 0, 0, 0.455) 57.61%, rgba(0, 0, 0, 0.373) 62.38%, rgba(0, 0, 0, 0.291) 67.33%, rgba(0, 0, 0, 0.212) 72.55%, rgba(0, 0, 0, 0.138) 78.22%, rgba(0, 0, 0, 0.07) 84.61%, rgba(0, 0, 0, 0.019) 92.08%, rgba(0, 0, 0, 0) 100%);
 		    display: block;
-		    content: '';
-		    width: 100%;
-		    height: 100%;
-		    opacity: 0.9;
-		    position: absolute;
-		    bottom: 0;
-		    transition: all 250ms ease-in-out;
-		    @media screen and (min-width: 500px) {
-			    border-radius: 8px;
+			&::before {
+			    background: linear-gradient(to top, black 10%, rgba(0, 0, 0, 0.978) 18.55%, rgba(0, 0, 0, 0.925) 25.93%, rgba(0, 0, 0, 0.857) 32.23%, rgba(0, 0, 0, 0.781) 37.9%, rgba(0, 0, 0, 0.701) 43.12%, rgba(0, 0, 0, 0.62) 48.07%, rgba(0, 0, 0, 0.538) 52.84%, rgba(0, 0, 0, 0.455) 57.61%, rgba(0, 0, 0, 0.373) 62.38%, rgba(0, 0, 0, 0.291) 67.33%, rgba(0, 0, 0, 0.212) 72.55%, rgba(0, 0, 0, 0.138) 78.22%, rgba(0, 0, 0, 0.07) 84.61%, rgba(0, 0, 0, 0.019) 92.08%, rgba(0, 0, 0, 0) 100%);
+			    content: '';
+			    width: 100%;
+			    height: 100%;
+			    opacity: 0.9;
+			    position: absolute;
+			    bottom: 0;
+			    transition: all 250ms ease-in-out;
+			    @media screen and (min-width: 500px) {
+				    border-radius: 8px;
+				}
 			}
+		}
+		@media screen and (max-width: 500px) {
+			background-image: none;
 		}
 	}
 	.c-card__content {
-		position: absolute;
 		bottom: 0;
-		color: white;
-		margin: 5px;
+		color: black;
+		margin: 5px 5px 5px 5px;
 	    width: calc(100% - 10px);
 		display: flex;
 		flex-direction: column;
 		@media screen and (min-width: 500px) {
+			color: white;
+			position: absolute;
 			text-align: center;
 			justify-content: stretch;
 		    margin: 0 auto;
@@ -240,6 +248,20 @@
 	    .c-btn--info {
 	    	background-color: #2A2A72;
 	    }
+	}
+	.c-card__mob-image {
+	    background-image: url("https://source.unsplash.com/random/500x800");
+	    background-repeat: no-repeat;
+	    background-position: center;
+	    background-size: cover;
+	    height: 80px;
+	    width: 120px;
+	    position: relative;
+	    transition: all 150ms ease-in-out;
+	    border-left: solid 5px;
+		@media screen and (min-width: 500px) {
+			display: none;
+		}
 	}
 }
 
